[package]
name = "multiproxy"
version = "0.1.0"
authors = ["Aleics <aleics.casanovas@gmail.com>"]

[dependencies]
hyper = { "git" = "https://github.com/hyperium/hyper.git" }
url = "1.4.0"
toml = "0.3"
serde = "0.9"
serde_derive = "0.9"
futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
tokio-tls = "0.1"
tokio-io = "0.1.1"
tokio-service = "0.1"
